# chromaterm

./: .editorconfig  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: basic.rs  cli.rs  limitations.rs  with_explicit_color_support.rs
src/: color.rs  color_level.rs  color_support.rs  colorize.rs  colorizer.rs  config.rs  conversion.rs  display.rs  lib.rs  prelude.rs  style.rs  styler.rs  styles.rs  stylize.rs
src/colors/: eight_bit.rs  mod.rs  simple.rs  true_color.rs
