[package]
name = "chromaterm"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Yet another crate for terminal colors."
repository = "https://github.com/spenserblack/chromaterm.git"
keywords = ["color", "terminal", "ansi"]
categories = ["command-line-interface"]
exclude = [".devcontainer/", ".github/", ".vscode/", ".editorconfig", ".gitignore"]
rust-version = "1.85.1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rstest = { version = "0.26", default-features = false, features = ["crate-name"] }
